--- a/ep11.html
+++ b/ep11.html
@@ -6,62 +6,47 @@
     <title>Document</title>
     <style>
         div{
-            height: 100px;
-            width: 100px;
+            background-color: beige;
+            border: 5px solid lightblue;
         }
-        .box1{
-            background-color: red;
-            border: solid 10px green;
+        #box-1{
+            /* padding: 10px; */
+            padding-right: 20px;
+            padding-left: 30px;
+            padding-top: 50px;
+            padding-bottom: 100px;
         }
-        .box2{
-            background-color: lightgreen;
-            border: dashed 10px red;
+        #box-2{
+            padding: auto;
         }
-        .box3{
-            background-color: lightblue;
-            border: dotted 10px yellow;
+        #box-3{
+            background-color: turquoise;
         }
-        .box4{
-            background-color: aquamarine;
-            border-top-style: solid;
-            border-right-style: dashed;
-            border-bottom-style: dotted;
-            border-left-style: ridge;
+        #box-4{
+            background-color: rgb(98, 54, 253);
         }
-        .box5{background-color: bisque;
-            border-style: solid;
-            /* border-width: thick;
-            border-width: thin;
-            border-width:medium ;
-            border-width: inherit;
-            border-width: initial; */
-            border-left-width:  thin;
-            border-right-width:  thin;
-            border-top-width:  thick;
-            border-bottom-width:  thick;
-        }
-        .box6{
-            background-color: aquamarine;
-            /* border-style: solid; */
-            /* border-radius: 10px; */
-            /* border-radius: 10px 20px; */
-            /* border-radius: 10px 20px 30px; */
-            /* border-radius: 10px 20px 30px 40px; */
+        #box-5{
+            background-color: #e3d5ca;
         }
         
     </style>
 </head>
 <body>
-    <div class="box1"></div>
+    <div id="box-1">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis modi, voluptates autem vitae magni id illo quibusdam commodi quisquam quaerat deserunt alias exercitationem, dicta, natus doloribus tenetur explicabo.</p>
+    </div>
     <hr>
-    <div class="box2"></div>
-    <hr>
-    <div class="box3"></div>
-    <hr>
-    <div class="box4"></div>
-    <hr>
-    <div class="box5"></div>
-    <hr>
-    <div class="box6"></div>
+    <div id="box-2">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto ducimus alias molestias nam eius, beatae quasi eos unde non ipsam.</p>
+    </div>
+    <div id="box-3">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto ducimus alias molestias nam eius, beatae quasi eos unde non ipsam.</p>
+    </div>
+    <div id="box-4">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto ducimus alias molestias nam eius, beatae quasi eos unde non ipsam.</p>
+    </div>
+    <div id="box-5">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto ducimus alias molestias nam eius, beatae quasi eos unde non ipsam.</p>
+    </div>
 </body>
 </html>
